hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tapply_enum.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

enum Pos: int {}

function f(~Pos $i): Pos {
  return $i; // error
}
